deploy/k8s/auth/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-staging
  labels:
    app.kubernetes.io/part-of: qooma
    env: staging
