deploy/k8s/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: auth-staging
  labels:
    app: auth-api
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
