deploy/k8s/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api
  namespace: auth-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth-staging.sharedisini.com
      secretName: auth-staging-tls
  rules:
    - host: auth-staging.sharedisini.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 80
